# HORNET

./: .gitignore  Cargo.toml  README.md
benches/: hornet.rs
crates/plonk/: Cargo.toml
crates/plonk/src/: curve.rs  kzg.rs  lib.rs  permutation.rs  prover.rs  quotient.rs  srs.rs
crates/plonk/src/poly/: domain.rs  lagrange.rs  mod.rs
demo/: README.md
docs/: bidirectional-demo.md  localnet-three-router.md  router-setup-plan.md  zkmb-hornet-protocol.md
example/: pa.rs  routing.rs
groth16/: Cargo.toml
groth16/src/: lib.rs  math.rs  prover.rs  verifier.rs
groth16/src/math/: curve.rs  fft.rs  field.rs  mod.rs  poseidon.rs
groth16/src/r1cs/: gadgets.rs  mod.rs  poseidon.rs
oprf/: Cargo.toml
oprf/src/: lib.rs
src/: ahdr.rs  chdr.rs  config.rs  crypto.rs  forward.rs  fragment.rs  fs.rs  fs_payload.rs  lib.rs  main.rs  node.rs  onion.rs  packet.rs  policy.rs  routing.rs  setup.rs  source.rs  sphinx.rs  time.rs  types.rs  utils.rs  wire.rs
src/adapters/: mod.rs
src/adapters/actix/: mod.rs  prove.rs
src/adapters/plonk/: mod.rs  validator.rs
src/api/: hello.rs  prove.rs
src/application/: forward.rs  mod.rs  prove.rs  setup.rs
src/core/: mod.rs
src/core/policy/: capsule.rs  metadata.rs  mod.rs  registry.rs
src/crypto/: dh.rs  kdf.rs  mac.rs  mod.rs  prg.rs  prp.rs  rng.rs  stream.rs
src/fs/: core.rs  payload.rs
src/node/: backward.rs  forward.rs
src/packet/: ahdr.rs  chdr.rs  core.rs  fs_core.rs  fs_payload.rs  mod.rs  onion.rs  payload.rs
src/packet/fs/: mod.rs
src/policy/: blocklist.rs  circuit.rs  client.rs  encoder.rs  extract.rs  manifest.rs  metadata.rs  mod.rs  plonk.rs  registry.rs  witness.rs
src/router/: config.rs  io.rs  mod.rs  runtime.rs  storage.rs  sync.rs
src/router/runtime/: forward.rs  mod.rs
src/setup/: directory.rs  wire.rs
tests/: pipeline.rs  router_flow.rs
tests/suppert/: mod.rs
