[package]
name = "hornet"
version = "0.1.0"
edition = "2024"

[features]
# Core is no_std by default. Enable `std` to unlock adapters/tests later.
# Make strict (paper-compliant) Sphinx the default entry path.
default = ["strict_sphinx"]
std = []
strict_sphinx = []

[dependencies]
# no_std-friendly cryptography building blocks
aes = { version = "0.8", default-features = false }
ctr = { version = "0.9", default-features = false }
hkdf = { version = "0.12", default-features = false }
hmac = { version = "0.12", default-features = false }
sha2 = { version = "0.10", default-features = false }
rand_core = { version = "0.6", default-features = false }
generic-array = { version = "0.14", default-features = false }
subtle = { version = "2.5", default-features = false }
zeroize = { version = "1.7", default-features = false, features = ["zeroize_derive"] }
x25519-dalek = { version = "2", default-features = false }
curve25519-dalek = { version = "3", default-features = false, features = ["u64_backend"] }
