[package]
name = "hornet"
version = "0.1.0"
edition = "2021"
[dependencies]
# no_std-friendly cryptography building blocks
aes = { version = "0.8", default-features = false }
ctr = { version = "0.9", default-features = false }
hkdf = { version = "0.12", default-features = false }
hmac = { version = "0.12", default-features = false }
sha2 = { version = "0.10", default-features = false }
rand_core = { version = "0.6", default-features = false }
generic-array = { version = "1.0", default-features = false }
subtle = { version = "2.5", default-features = false }
zeroize = { version = "1.7", default-features = false, features = ["zeroize_derive"] }
x25519-dalek = { version = "2", default-features = false }
curve25519-dalek = { version = "3", default-features = false, features = ["u64_backend"] }
rand = { version = "0.8", default-features = false, features = ["small_rng"] }
dusk-plonk = { version = "0.14", default-features = false, features = ["alloc"] }
dusk-bytes = { version = "0.1", default-features = false }
rand_chacha = { version = "0.3", default-features = false }
spin = { version = "0.9", default-features = false, features = ["mutex", "spin_mutex"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
ureq = { version = "2.9", default-features = false, features = ["json", "tls"] }
actix-web = "4.11.0"

[dev-dependencies]
criterion = { version = "0.5", default-features = false, features = ["html_reports"] }

[[bench]]
name = "hornet"
harness = false
