[package]
name = "oprf"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["rlib"]

[features]
default = ["alloc"]
alloc = []
std = ["alloc", "curve25519-dalek/std", "sha2/std"]

[dependencies]
curve25519-dalek = { version = "3", default-features = false, features = ["alloc", "u64_backend"] }
sha2 = { version = "0.9", default-features = false }
rand_core = { version = "0.5", default-features = false }
subtle = { version = "2.5", default-features = false }
zeroize = { version = "1.7", default-features = false, features = ["zeroize_derive"] }

[dev-dependencies]
rand_core = { version = "0.5", default-features = true }
